heading font-size reduced on mobile // fixed flex issues with search buttons

--- a/web/themes/cbcny_theme/sass/partials/components/_page-title.scss
+++ b/web/themes/cbcny_theme/sass/partials/components/_page-title.scss
@@ -19,6 +19,11 @@
   @include breakpoint($bp-hide-mobile-menu) {
   	margin-right: rem(370px);
   }
+
+  //iphone fix
+  @include breakpoint(max-width 480px) {
+    font-size: 2.5em;
+  }
 }
 
 .page-title--search {
